--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% flash.each do |type, message| %>
+  <div class='flash' id='<%= type %>'>
+    <%= message %>
+  </div>
+<% end %>
 
 <%= yield %>
-
 </body>
 </html>
+
