--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,1 +1,34 @@
-<%= link_to 'New Car', new_car_path %>
+<p id="notice"><%= notice %></p>
+
+<h1>Listing cars</h1>
+
+<table>
+  <thead>
+  <tr>
+    <th>Make</th>
+    <th>Model</th>
+    <th>Year url</th>
+    <th>Price</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @cars.each do |car| %>
+    <tr>
+      <td><%= car.make %></td>
+      <td><%= car.model %></td>
+      <td><%= car.year_url %></td>
+      <td><%= car.price %></td>
+      <td><%= link_to 'Show', car %></td>
+      <td><%= link_to 'Edit', edit_car_path(car) %></td>
+      <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' }, id: dom_id(car, 'destroy') %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New car', new_car_path %>
+
