--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -7,7 +7,7 @@
   <tr>
     <th>Make</th>
     <th>Model</th>
-    <th>Year url</th>
+    <th>Year</th>
     <th>Price</th>
     <th colspan="3"></th>
   </tr>
@@ -18,7 +18,7 @@
     <tr>
       <td><%= car.make %></td>
       <td><%= car.model %></td>
-      <td><%= car.year_url %></td>
+      <td><%= car.year %></td>
       <td><%= car.price %></td>
       <td><%= link_to 'Show', car %></td>
       <td><%= link_to 'Edit', edit_car_path(car) %></td>
